Bug 392223 - segmentation fault
Summary: segmentation fault
Status: RESOLVED FIXED
Alias: None
Product: clazy
Classification: Developer tools
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-23 08:54 UTC by eric.lemanissier
Modified: 2025-09-04 17:11 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description eric.lemanissier 2018-03-23 08:54:02 UTC
When running the tests, I keep getting segmentation faults. Maybe it is because I am using clang 7.0 ?

#0 0x00007f7614995d7a llvm::sys::PrintStackTrace(llvm::raw_ostream&) (/usr/lib/x86_64-linux-gnu/libLLVM-7.so.1+0x8a5d7a)
#1 0x00007f7614993f3e llvm::sys::RunSignalHandlers() (/usr/lib/x86_64-linux-gnu/libLLVM-7.so.1+0x8a3f3e)
#2 0x00007f761499408c (/usr/lib/x86_64-linux-gnu/libLLVM-7.so.1+0x8a408c)
#3 0x00007f7617bf6390 __restore_rt (/lib/x86_64-linux-gnu/libpthread.so.0+0x11390)
#4 0x000000000186b2d8 clang::ast_matchers::MatchFinder::MatchFinder(clang::ast_matchers::MatchFinder::MatchFinderOptions) (/usr/lib/llvm-7/bin/clang+0x186b2d8)
#5 0x00007f761147b691 ClazyASTAction::CreateASTConsumer(clang::CompilerInstance&, llvm::StringRef) (../installclazy/lib/ClangLazy.so+0x431691)
#6 0x0000000000b4b2d4 clang::FrontendAction::CreateWrappedASTConsumer(clang::CompilerInstance&, llvm::StringRef) (/usr/lib/llvm-7/bin/clang+0xb4b2d4)
#7 0x0000000000b50b96 clang::FrontendAction::BeginSourceFile(clang::CompilerInstance&, clang::FrontendInputFile const&) (/usr/lib/llvm-7/bin/clang+0xb50b96)
#8 0x0000000000b14d66 clang::CompilerInstance::ExecuteAction(clang::FrontendAction&) (/usr/lib/llvm-7/bin/clang+0xb14d66)
#9 0x0000000000bd3e92 clang::ExecuteCompilerInvocation(clang::CompilerInstance*) (/usr/lib/llvm-7/bin/clang+0xbd3e92)
#10 0x0000000000750318 cc1_main(llvm::ArrayRef<char const*>, char const*, void*) (/usr/lib/llvm-7/bin/clang+0x750318)
#11 0x000000000073c8de main (/usr/lib/llvm-7/bin/clang+0x73c8de)
#12 0x00007f7613274830 __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x20830)
#13 0x000000000074dcf9 _start (/usr/lib/llvm-7/bin/clang+0x74dcf9)
Stack dump:
0.      Program arguments: /usr/lib/llvm-7/bin/clang -cc1 -triple x86_64-pc-linux-gnu -emit-obj -mrelax-all -disable-free -disable-llvm-verifier -discard-value-names -main-file-name main.cpp -mrelocation-model pic -pic-level 2 -mthread-model posix -mdisable-fp-elim -fmath-errno -masm-verbose -mconstructor-aliases -munwind-tables -fuse-init-array -target-cpu x86-64 -dwarf-column-info -debugger-tuning=gdb -coverage-notes-file /home/admin/jenkins/workspace/PhysioFlow/software/staticAnalysis/ClangLazy/tests/main.gcno -resource-dir /usr/lib/llvm-7/lib/clang/7.0.0 -isystem /home/admin/Qt/5.8/gcc_64/include -internal-isystem /usr/bin/../lib/gcc/x86_64-linux-gnu/5.4.0/../../../../include/c++/5.4.0 -internal-isystem /usr/bin/../lib/gcc/x86_64-linux-gnu/5.4.0/../../../../include/x86_64-linux-gnu/c++/5.4.0 -internal-isystem /usr/bin/../lib/gcc/x86_64-linux-gnu/5.4.0/../../../../include/x86_64-linux-gnu/c++/5.4.0 -internal-isystem /usr/bin/../lib/gcc/x86_64-linux-gnu/5.4.0/../../../../include/c++/5.4.0/backward -internal-isystem /usr/include/clang/7.0.0/include/ -internal-isystem /usr/local/include -internal-isystem /usr/lib/llvm-7/lib/clang/7.0.0/include -internal-externc-isystem /usr/include/x86_64-linux-gnu -internal-externc-isystem /include -internal-externc-isystem /usr/include -Wno-unused-value -std=c++14 -fdeprecated-macro -fdebug-compilation-dir /home/admin/jenkins/workspace/PhysioFlow/software/staticAnalysis/ClangLazy/tests -ferror-limit 19 -fmessage-length 0 -fobjc-runtime=gcc -fcxx-exceptions -fexceptions -fdiagnostics-show-option -load ClangLazy.so -add-plugin clang-lazy -plugin-arg-clang-lazy no-inplace-fixits -plugin-arg-clang-lazy wrong-qevent-cast -plugin-arg-clang-lazy enable-all-fixits -o main.o -x c++ wrong-qevent-cast/main.cpp
clang: error: unable to execute command: Segmentation fault (core dumped)
clang: error: clang frontend command failed due to signal (use -v to see invocation)
clang version 7.0.0- (trunk)
Target: x86_64-pc-linux-gnu
Thread model: posix
InstalledDir: /usr/bin
clang: note: diagnostic msg: PLEASE submit a bug report to https://bugs.llvm.org/ and include the crash backtrace, preprocessed source, and associated run script.
clang: note: diagnostic msg:
********************

the invocation is the following:
# Crash reproducer for clang version 7.0.0- (trunk)
# Driver args: "-Xclang" "-load" "-Xclang" "ClangLazy.so" "-Xclang" "-add-plugin" "-Xclang" "clang-lazy" "-Xclang" "-plugin-arg-clang-lazy" "-Xclang" "no-inplace-fixits" "-Wno-unused-value" "-Qunused-arguments" "-std=c++14" "-isystem" "/home/admin/Qt/5.8/gcc_64/include" "-fPIC" "-c" "-Xclang" "-plugin-arg-clang-lazy" "-Xclang" "wrong-qevent-cast" "-Xclang" "-plugin-arg-clang-lazy" "-Xclang" "enable-all-fixits" "wrong-qevent-cast/main.cpp"
# Original command:  "/usr/lib/llvm-7/bin/clang" "-cc1" "-triple" "x86_64-pc-linux-gnu" "-emit-obj" "-mrelax-all" "-disable-free" "-disable-llvm-verifier" "-discard-value-names" "-main-file-name" "main.cpp" "-mrelocation-model" "pic" "-pic-level" "2" "-mthread-model" "posix" "-mdisable-fp-elim" "-fmath-errno" "-masm-verbose" "-mconstructor-aliases" "-munwind-tables" "-fuse-init-array" "-target-cpu" "x86-64" "-dwarf-column-info" "-debugger-tuning=gdb" "-coverage-notes-file" "/home/admin/jenkins/workspace/PhysioFlow/software/staticAnalysis/ClangLazy/tests/main.gcno" "-resource-dir" "/usr/lib/llvm-7/lib/clang/7.0.0" "-isystem" "/home/admin/Qt/5.8/gcc_64/include" "-internal-isystem" "/usr/bin/../lib/gcc/x86_64-linux-gnu/5.4.0/../../../../include/c++/5.4.0" "-internal-isystem" "/usr/bin/../lib/gcc/x86_64-linux-gnu/5.4.0/../../../../include/x86_64-linux-gnu/c++/5.4.0" "-internal-isystem" "/usr/bin/../lib/gcc/x86_64-linux-gnu/5.4.0/../../../../include/x86_64-linux-gnu/c++/5.4.0" "-internal-isystem" "/usr/bin/../lib/gcc/x86_64-linux-gnu/5.4.0/../../../../include/c++/5.4.0/backward" "-internal-isystem" "/usr/include/clang/7.0.0/include/" "-internal-isystem" "/usr/local/include" "-internal-isystem" "/usr/lib/llvm-7/lib/clang/7.0.0/include" "-internal-externc-isystem" "/usr/include/x86_64-linux-gnu" "-internal-externc-isystem" "/include" "-internal-externc-isystem" "/usr/include" "-Wno-unused-value" "-std=c++14" "-fdeprecated-macro" "-fdebug-compilation-dir" "/home/admin/jenkins/workspace/PhysioFlow/software/staticAnalysis/ClangLazy/tests" "-ferror-limit" "19" "-fmessage-length" "0" "-fobjc-runtime=gcc" "-fcxx-exceptions" "-fexceptions" "-fdiagnostics-show-option" "-load" "ClangLazy.so" "-add-plugin" "clang-lazy" "-plugin-arg-clang-lazy" "no-inplace-fixits" "-plugin-arg-clang-lazy" "wrong-qevent-cast" "-plugin-arg-clang-lazy" "enable-all-fixits" "-o" "main.o" "-x" "c++" "wrong-qevent-cast/main.cpp"
 "/usr/lib/llvm-7/bin/clang" "-cc1" "-triple" "x86_64-pc-linux-gnu" "-emit-obj" "-mrelax-all" "-disable-free" "-disable-llvm-verifier" "-discard-value-names" "-main-file-name" "main.cpp" "-mrelocation-model" "pic" "-pic-level" "2" "-mthread-model" "posix" "-mdisable-fp-elim" "-fmath-errno" "-masm-verbose" "-mconstructor-aliases" "-munwind-tables" "-fuse-init-array" "-target-cpu" "x86-64" "-dwarf-column-info" "-debugger-tuning=gdb" "-coverage-notes-file" "/home/admin/jenkins/workspace/PhysioFlow/software/staticAnalysis/ClangLazy/tests/main.gcno" "-Wno-unused-value" "-std=c++14" "-fdeprecated-macro" "-ferror-limit" "19" "-fmessage-length" "0" "-fobjc-runtime=gcc" "-fcxx-exceptions" "-fexceptions" "-fdiagnostics-show-option" "-load" "ClangLazy.so" "-add-plugin" "clang-lazy" "-plugin-arg-clang-lazy" "no-inplace-fixits" "-plugin-arg-clang-lazy" "wrong-qevent-cast" "-plugin-arg-clang-lazy" "enable-all-fixits" "-x" "c++" "main-0ebb1b.cpp"
Comment 1 Sergio Martins 2018-03-23 13:28:23 UTC
Works for me with latest trunk, on archlinux.

Are you sure you have a matching llvm and clang, and updated both repos ?
Comment 2 Sergio Martins 2018-03-27 19:09:22 UTC
works for me on ubuntu 16.04 too

can you pastebin:
- configure flags passed to llvm/clang
- output of cmake when building clazy
Comment 3 Sergio Martins 2018-03-27 19:11:46 UTC
If you want to try my steps:
$ cd 
$ git clone https://github.com/llvm-mirror/llvm.git
$ cd llvm/tools/
$ git clone https://github.com/llvm-mirror/clang.git
$ cd ..
$ cd projects/
$ git clone https://github.com/llvm-mirror/compiler-rt.git
$ cd compiler-rt/
$ mkdir /root/llvm7/ # running with root on my docker container, change here :)
$ cmake -DCMAKE_INSTALL_PREFIX=/root/llvm7 -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_TARGETS_TO_BUILD="X86" -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release ../llvm
$ make -j12
$ make install

$ export PATH=/root/llvm7/bin/:$PATH
$ export LD_LIBRARY_PATH=/root/llbm7/lib/:$LD_LIBRARY_PATH
$ <uninstalled llvm 3.8>
$ cd clazy/
$ git clean -fdx .
$ git pull
$ cmake -DCMAKE_INSTALL_PREFIX=/root/llvm7/
$ make && make install
$ cd tests
$ ./run_tests.py
Comment 4 eric.lemanissier 2018-03-28 14:03:04 UTC
I could not manage to build clang, so I tried another thing: building clazy inside the debian:unstable docker image. Unfortunately I hit the exact same wall as on native ubuntu 16.04

#0 0x00007f9ce946685a llvm::sys::PrintStackTrace(llvm::raw_ostream&) (/usr/lib/llvm-7/bin/../lib/libLLVM-7.so.1+0x93285a)
#1 0x00007f9ce9464b96 llvm::sys::RunSignalHandlers() (/usr/lib/llvm-7/bin/../lib/libLLVM-7.so.1+0x930b96)
#2 0x00007f9ce9464cb3 (/usr/lib/llvm-7/bin/../lib/libLLVM-7.so.1+0x930cb3)
#3 0x00007f9cec729f50 __restore_rt (/lib/x86_64-linux-gnu/libpthread.so.0+0x11f50)
#4 0x000055ebeee173c9 clang::ast_matchers::MatchFinder::MatchFinder(clang::ast_matchers::MatchFinder::MatchFinderOptions) (/usr/lib/llvm-7/bin/clang+0x18483c9)
#5 0x00007f9ce58a9c11 ClazyASTAction::CreateASTConsumer(clang::CompilerInstance&, llvm::StringRef) (/usr/local/lib/ClangLazy.so+0x40ac11)
#6 0x000055ebede782cd clang::FrontendAction::CreateWrappedASTConsumer(clang::CompilerInstance&, llvm::StringRef) (/usr/lib/llvm-7/bin/clang+0x8a92cd)
#7 0x000055ebede7e76c clang::FrontendAction::BeginSourceFile(clang::CompilerInstance&, clang::FrontendInputFile const&) (/usr/lib/llvm-7/bin/clang+0x8af76c)
#8 0x000055ebede42da0 clang::CompilerInstance::ExecuteAction(clang::FrontendAction&) (/usr/lib/llvm-7/bin/clang+0x873da0)
#9 0x000055ebedf218fb clang::ExecuteCompilerInvocation(clang::CompilerInstance*) (/usr/lib/llvm-7/bin/clang+0x9528fb)
#10 0x000055ebeda3c8e8 cc1_main(llvm::ArrayRef<char const*>, char const*, void*) (/usr/lib/llvm-7/bin/clang+0x46d8e8)
#11 0x000055ebeda2b4b7 main (/usr/lib/llvm-7/bin/clang+0x45c4b7)
#12 0x00007f9ce7c37a87 __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21a87)
#13 0x000055ebeda3a24a _start (/usr/lib/llvm-7/bin/clang+0x46b24a)
Stack dump:
0.	Program arguments: /usr/lib/llvm-7/bin/clang -cc1 -triple x86_64-pc-linux-gnu -emit-obj -mrelax-all -disable-free -disable-llvm-verifier -discard-value-names -main-file-name main.cpp -mrelocation-model pic -pic-level 2 -mthread-model posix -mdisable-fp-elim -fno-escaping-block-tail-calls -fmath-errno -masm-verbose -mconstructor-aliases -munwind-tables -fuse-init-array -target-cpu x86-64 -dwarf-column-info -debugger-tuning=gdb -coverage-notes-file /clazy/tests/main.gcno -resource-dir /usr/lib/llvm-7/lib/clang/7.0.0 -isystem /home/admin/Qt/5.8/gcc_64/include -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/7.3.0/../../../../include/c++/7.3.0 -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/7.3.0/../../../../include/x86_64-linux-gnu/c++/7.3.0 -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/7.3.0/../../../../include/x86_64-linux-gnu/c++/7.3.0 -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/7.3.0/../../../../include/c++/7.3.0/backward -internal-isystem /usr/include/clang/7.0.0/include/ -internal-isystem /usr/local/include -internal-isystem /usr/lib/llvm-7/lib/clang/7.0.0/include -internal-externc-isystem /usr/include/x86_64-linux-gnu -internal-externc-isystem /include -internal-externc-isystem /usr/include -Wno-unused-value -std=c++14 -fdeprecated-macro -fdebug-compilation-dir /clazy/tests -ferror-limit 19 -fmessage-length 0 -fobjc-runtime=gcc -fcxx-exceptions -fexceptions -fdiagnostics-show-option -load ClangLazy.so -add-plugin clang-lazy -plugin-arg-clang-lazy no-inplace-fixits -plugin-arg-clang-lazy auto-unexpected-qstringbuilder -plugin-arg-clang-lazy enable-all-fixits -o main.o -x c++ auto-unexpected-qstringbuilder/main.cpp 
clang: error: unable to execute command: Segmentation fault (core dumped)
clang: error: clang frontend command failed due to signal (use -v to see invocation)
clang version 7.0.0- (trunk)
Target: x86_64-pc-linux-gnu
Thread model: posix
InstalledDir: /usr/lib/llvm-7/bin

The cmake output is the following:
cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DLLVM_ROOT=/usr/lib/llvm-7 ../clazy
-- The C compiler identification is Clang 7.0.0
-- The CXX compiler identification is Clang 7.0.0
-- Check for working C compiler: /usr/lib/llvm-7/bin/clang
-- Check for working C compiler: /usr/lib/llvm-7/bin/clang -- works
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Detecting C compile features
-- Detecting C compile features - done
-- Check for working CXX compiler: /usr/lib/llvm-7/bin/clang++
-- Check for working CXX compiler: /usr/lib/llvm-7/bin/clang++ -- works
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found LLVM (version: 7.0.0): (using /usr/lib/llvm-7/bin/llvm-config)
--   Include dirs:   /usr/lib/llvm-7/include
--   LLVM libraries: -lLLVM-7
--   LLVM System libraries: 
-- Found Clang (LLVM version: 7.0.0)
--   Include dirs:       /usr/lib/llvm-7/include
--   Clang libraries:    /usr/lib/llvm-7/lib/libclangFrontend.a;/usr/lib/llvm-7/lib/libclangDriver.a;/usr/lib/llvm-7/lib/libclangCodeGen.a;/usr/lib/llvm-7/lib/libclangSema.a;/usr/lib/llvm-7/lib/libclangAnalysis.a;/usr/lib/llvm-7/lib/libclangRewriteFrontend.a;/usr/lib/llvm-7/lib/libclangRewrite.a;/usr/lib/llvm-7/lib/libclangAST.a;/usr/lib/llvm-7/lib/libclangASTMatchers.a;/usr/lib/llvm-7/lib/libclangParse.a;/usr/lib/llvm-7/lib/libclangLex.a;/usr/lib/llvm-7/lib/libclangBasic.a;/usr/lib/llvm-7/lib/libclangARCMigrate.a;/usr/lib/llvm-7/lib/libclangEdit.a;/usr/lib/llvm-7/lib/libclangFrontendTool.a;/usr/lib/llvm-7/lib/libclangRewrite.a;/usr/lib/llvm-7/lib/libclangSerialization.a;/usr/lib/llvm-7/lib/libclangTooling.a;/usr/lib/llvm-7/lib/libclangStaticAnalyzerCheckers.a;/usr/lib/llvm-7/lib/libclangStaticAnalyzerCore.a;/usr/lib/llvm-7/lib/libclangStaticAnalyzerFrontend.a;/usr/lib/llvm-7/lib/libclangSema.a
--   Libclang C library: /usr/lib/llvm-7/lib/libclang.so
[91mLooking for std::regex support...
[0m-- Configuring done
-- Generating done
-- Build files have been written to: /build
Comment 5 eric.lemanissier 2018-03-28 14:15:06 UTC
I forgot to mention : the last test was performed using llvm and clang from http://apt.llvm.org/. Also, the same docker debian configuration works great when using clang/llvm 6.0 instead of 7
Comment 6 Sergio Martins 2018-03-28 14:57:00 UTC
If you paste the commands I need to install that specific llvm I'll give it a go. I have a ubuntu 16.04 docker
Comment 7 eric.lemanissier 2018-03-28 15:18:57 UTC
sudo apt -o Acquire::https::No-Cache=True -o Acquire::http::No-Cache=True update --quiet
sudo apt-get install --quiet --yes --no-install-recommends wget ca-certificates gnupg2 
wget https://apt.llvm.org/llvm-snapshot.gpg.key && sudo apt-key add llvm-snapshot.gpg.key
echo "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial main" > /etc/apt/sources.list.d/llvm.list
sudo apt -o Acquire::https::No-Cache=True -o Acquire::http::No-Cache=True update --quiet
sudo apt-get install --quiet --yes --no-install-recommends make libstdc++-7-dev clang-7 zlib1g-dev libglib2.0-0 llvm-7-dev libclang-7-dev git cmake python libgl1-mesa-glx
Comment 8 Sergio Martins 2018-03-28 22:06:26 UTC
Reproduced. 

It only happens when using clang as compiler, building clazy with gcc is fine.
This looks like a clang 7.0 bug.
Comment 9 Sergio Martins 2018-09-19 18:30:42 UTC
Git commit 36dadd0e6d33101d0f26248376f2f1cbda5d8793 by Sergio Martins.
Committed on 19/09/2018 at 18:30.
Pushed by smartins into branch '1.3'.

prospective fix for crash with clang-7.0

This shuffles the code around in hope of avoiding what seems to be a
clang bug.

The backtrace and valgrind report don't make sense to me, and the crash
goes away if building clazy with gcc.

M  +5    -2    src/Clazy.cpp
M  +1    -1    src/Clazy.h

https://commits.kde.org/clazy/36dadd0e6d33101d0f26248376f2f1cbda5d8793
Comment 10 Sergio Martins 2018-09-20 17:30:12 UTC
Is this still happening with latest clazy ?
Comment 11 Sergio Martins 2018-09-22 19:31:07 UTC
Git commit d6cb7569816ce11160a2eeebd58a92a345b59f70 by Sergio Martins.
Committed on 22/09/2018 at 19:25.
Pushed by smartins into branch '1.3'.

Workaround crash with LLVM 7

If clazy is compiled with clang instead of gcc it might crash with:

==10637== Process terminating with default action of signal 11 (SIGSEGV): dumping core
==10637==  Access not within mapped region at address 0x8
==10637==    at 0x19CDD8C: clang::ast_matchers::MatchFinder::MatchFinder(clang::ast_matchers::MatchFinder::MatchFinderOptions) (in /usr/lib/llvm-7/bin/clang)
==10637==    by 0x9D75670: ClazyASTConsumer (Clazy.cpp:62)
==10637==    by 0x9D75670: ClazyASTAction::CreateASTConsumer(clang::CompilerInstance&, llvm::StringRef) (Clazy.cpp:183)
==10637==    by 0x9E29ED: clang::FrontendAction::CreateWrappedASTConsumer(clang::CompilerInstance&, llvm::StringRef) (in /usr/lib/llvm-7/bin/clang)
==10637==    by 0x9E8FCA: clang::FrontendAction::BeginSourceFile(clang::CompilerInstance&, clang::FrontendInputFile const&) (in /usr/lib/llvm-7/bin/clang)
==10637==    by 0x9AE3D5: clang::CompilerInstance::ExecuteAction(clang::FrontendAction&) (in /usr/lib/llvm-7/bin/clang)
==10637==    by 0xA8C9FA: clang::ExecuteCompilerInvocation(clang::CompilerInstance*) (in /usr/lib/llvm-7/bin/clang)
==10637==    by 0x5822C7: cc1_main(llvm::ArrayRef<char const*>, char const*, void*) (in /usr/lib/llvm-7/bin/clang)
==10637==    by 0x571ACC: main (in /usr/lib/llvm-7/bin/clang)

After debugging clazy and clang's code I couldn't find anything wrong with it.
Valgrind's output doesn't make much sense, and simply compiling the Clazy.cpp
translation unit with gcc instead of clang makes the crash go away and valgrind's output is clean.

I'm assuming debian's LLVM was built with gcc and building clazy with clang
will have some sort of incompatibility, or maybe it's simply a clang bug.

The downside of this workaround is that qcolor-literal check will be disabled.
Next step will be producing a minimal test case and reporting to LLVM.
CCMAIL: Woebbeking@kde.org

M  +6    -0    CMakeLists.txt
M  +7    -0    src/Clazy.cpp

https://commits.kde.org/clazy/d6cb7569816ce11160a2eeebd58a92a345b59f70
Comment 12 Bernhard Rosenkränzer 2022-05-18 10:06:38 UTC
The bug in clang has been fixed a long time ago, but clazy still disables the functionality when built with clang.
The workaround should be limited to the versions of clang affected by the bug (anything between 7.0 and 8.0).
https://invent.kde.org/sdk/clazy/-/merge_requests/57
Comment 13 Alexander Lohnau 2025-09-04 17:11:55 UTC
Marking this old bug as fixed